@@ -22,19 +22,28 @@ all of the required distributions.
   ("%JAVA_HOME%\bin" for Windows) to your PATH.  Configure the CLASSPATH
   environment variable as well, if required.
 
-* Download the latest Ant binary distribution (currently version 1.4.1) from
-  <http://jakarta.apache.org/site/binindex.html> and install it in the
+* Download the latest Ant binary distribution (currently version 1.6.1) from
+  <http://ant.apache.org/bindownload.cgi> and install it in the
   $JAKARTA_HOME directory.  Set an "ANT_HOME" environment variable
   to point to $JAKARTA_HOME/jakarta-ant-<version> where <version> matches
-  the version of Ant downloaded ($JAKARTA_HOME/jakarta-ant-1.4.1 for
-  Ant v1.4.1).  If you are using Windows 9x, you should set ANT_HOME using
+  the version of Ant downloaded ($JAKARTA_HOME/jakarta-ant-1.6.1 for
+  Ant v1.6.1).  If you are using Windows 9x, you should set ANT_HOME using
   the DOS 8.3 name.  In this case, you may find it convenient to rename
-  the directory to a name that is within the DOS 8.3 format, such as "ant-141".
+  the directory to a name that is within the DOS 8.3 format, such as "ant-161".
   Also, add "$ANT_HOME/bin" (%ANT_HOME%/bin for Windows) to your PATH.
+
+* Download the latest RegExp binary distribution (currently version 1.3.1) from
+  <http://jakarta.apache.org/site/binindex.cgi> and install it in the
+  $JAKARTA_HOME directory.  
+
+* Download the latest commons-modeler binary distribution 
+  (currently version 1.1.1) from <http://jakarta.apache.org/site/binindex.cgi>
+  and install it in the $JAKARTA_HOME directory.  
 
 * If you want to include SSL support, download the Java Secure Sockets
   Extension (JSSE) implementation (current version number is 1.0.2) from
-  <http://java.sun.com/products/jsse/> and install it into $JAKARTA_HOME.
+  <http://java.sun.com/products/jsse/> and install it into $JAKARTA_HOME.  
+  This step is not necessary if you are using a 1.4.x JVM.
 
 * Obtain the following source distribution(s) either from anonymous CVS (see
   <http://jakarta.apache.org/site/cvsindex.html> for details) or by
