@@ -1,4 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!--
+   Copyright 1999-2004 The Apache Software Foundation
+ 
+   Licensed under the Apache License, Version 2.0 (the "License");
+   you may not use this file except in compliance with the License.
+   You may obtain a copy of the License at
+ 
+       http://www.apache.org/licenses/LICENSE-2.0
+ 
+   Unless required by applicable law or agreed to in writing, software
+   distributed under the License is distributed on an "AS IS" BASIS,
+   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+   See the License for the specific language governing permissions and
+   limitations under the License.
+-->
 <project name="Tomcat" default="main" basedir=".">
 
   <!-- Compilation properties -->
@@ -839,7 +854,7 @@
     <copy tofile="${tomcat.build}/webapps/admin/WEB-INF/lib/ant.jar"
           file="${ant.jar}"/>
     <copy tofile="${tomcat.build}/webapps/admin/WEB-INF/lib/ant-launcher.jar"
-          file="${ant-launcher.jar}"/>
+          file="${ant-launcher.jar}" failonerror="false" />
     <jar jarfile="${tomcat.build}/webapps/admin/WEB-INF/lib/tomcat_util_test.jar"
          basedir="${tomcat.build}/classes">
       <include name="org/apache/tomcat/util/**"/>
