@@ -78,6 +78,8 @@ Bug No.  Description
 24123    Fix problem where the AccessLog wasn't logging request that produce
          no output.  Also log the Request's content length for PUT requests.
 
+         Partially update to use commons-logging.
+
 Jasper:
 
 Bug No.  Description
@@ -89,10 +91,14 @@ Bug No.  Description
 
 23101    Fix case dependency problem on Windows platforms.
 
+         Fix high byte chars (xlate to unicode)
+
+         Fix a problem when a jsp include another jsp with relative path.
+
 Configuration:
 
 Bug No.  Description
-
+8634     Allow alternative location for modules.xml
 
 
 Connectors:
